--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,31 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  static_pages:
+    home:
+      home: "Home"
+      sample_app: "Sample App"
+      home_pages: "This is the home page for the "
+      sample_application: "sample application."
+    help:
+      help: "Help"
+      get_help: "Get help on the Ruby on Rails Tutorial at the "
+      help_section: "Rails Tutorial help section"
+      to_get_help: "To get help on this sample app, see the "
+      at_book: "Ruby on Rails Tutorial book"
+    about:
+      about: "About"
+      the: "The"
+      is_a: "is a"
+      book: "book"
+      and: "and"
+      screencast: "screencast series"
+      teach: "to teach web development with"
+      intro: "This is the sample application"
+    contact:
+      contact: "Contact"
+      contact_at: "Contact at"
+      contact_page: "contact page"
+  tutorial: "Ruby on Rails Tutorial"
+  ruby: "Ruby on Rails"
+  ror_sampleapp: "Ruby on Rails Tutorial Sample App"
+  english: "English"
+  vietnam: "Vietnamese"
