Chapter4: Rails-flavored Ruby

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -29,4 +29,5 @@ vi:
   ror_sampleapp: "Hướng dẫn ứng dụng mẫu Rails"
   english: "Tiếng anh"
   vietnam: "Tiếng việt"
+  ruby: "Ruby on Rails Tutorial"
   
