--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -2,32 +2,44 @@ vi:
   static_pages:
     home:
       home: "Trang chủ"
-      sample_app: "Ứng dụng mẫu"
-      home_pages: "Đây là trang chủ "
+      This_is: "Đây là trang chủ cho"
       sample_application: "ứng dụng mẫu."
+      Welcome_to: "Chào mừng đến với ứng dụng mẫu"
+      sign_up: "Đăng ký ngay bây giờ"
     help:
-      help: "Trợ giúp"
-      get_help: "Nhận sự hỗ trợ Rails "
+      help: "Hỗ trợ"
+      help_app: "Hỗ trợ"
+      get_help: "Nhận sự hỗ trợ Ruby on Rails tại "
       help_section: "hỗ trợ Rails Tutorial "
-      to_get_help: "Nếu muốn nhận sự hỗ trợ từ ứng dụng mẫu này thì xem tại "
+      to_get_help: "Nếu muốn nhận sự hỗ trợ từ ứng dụng mẫu này, xem tại "
       at_book: "cuốn sách hướng dẫn Ruby on Rails"
     about:
       about: "Về chúng tôi"
-      the: "các"
+      the: ""
       is_a: "là một"
-      book: "quyển sách"
+      book: "cuốn sách"
       and: "và"
-      screencast: " screencast"
-      teach: "để dạy phát triền web với "
+      screencast: "tuyển tập screencast"
+      teach: "để dạy phát triển web với "
       intro: "Đây là ứng dụng mẫu cho hướng dẫn."
     contact:
       contact: "Liên hệ"
-      contact_at: "Liên hệ tại"
-      contact_page: "trang "
+      contact_at: "Liên hệ với Hướng dẫn về Ruby on Rails về ứng dụng mẫu tại"
+      contact_page: "trang này"
+  users:
+    new:
+      sign_up: "Đăng ký"
+      this_will: "Đây sẽ là trang đăng ký cho người dùng mới"
   tutorial: "Hướng dẫn Ruby on Rails"
   ruby: "Ruby on Rails"
-  ror_sampleapp: "Hướng dẫn ứng dụng mẫu Rails"
+  ror_sampleapp: "Hướng dẫn ứng dụng mẫu Ruby on Rails"
   english: "Tiếng anh"
   vietnam: "Tiếng việt"
-  ruby: "Ruby on Rails Tutorial"
-  
+  log_in: "Đăng nhập"
+  by: "bởi"
+  new: "MỚi"
+  home: "Trang chủ"
+  contact: "Liên Hệ"
+  about: "Về chúng tôi"
+  help: "Hỗ trợ"
+sample_app: "Ứng dụng mẫu"
